[package]
name = "influx-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
influx-client = { path = "../influx", version = "2.7.0" }
tokio = { version = "1.28.1", features = ["full"] }
